--- a/themes/meme/assets/scss/layout/_single.scss
+++ b/themes/meme/assets/scss/layout/_single.scss
@@ -49,6 +49,7 @@
         clear: both;
     }
     sup {
+        unicode-bidi: isolate;
         font-size: 70%;
         vertical-align: super;
         a {
