--- a/themes/meme/layouts/index.sectionsatom.xml
+++ b/themes/meme/layouts/index.sectionsatom.xml
@@ -55,9 +55,10 @@
                 <rights>{{ . | plainify | htmlUnescape }}</rights>
             {{- end }}
             {{- $summary := .Description | default (partial "utils/summary.html" $page) -}}
+            {{- $content := (partial "utils/content.html" $page) -}}
             <summary type="html">{{ partial "utils/make-links-absolute.html" (dict "$" . "content" $summary) | html }}</summary>
             {{ if $.Site.Params.includeContent }}
-                <content type="html">{{ partial "utils/make-links-absolute.html" (dict "$" . "content" .Content) | html }}</content>
+                <content type="html">{{ partial "utils/make-links-absolute.html" (dict "$" . "content" $content) | html }}</content>
             {{ end }}
             <!-- Sections -->
             {{ if eq $.Site.Params.categoryBy "sections" }}
