Work around Chromium's MathML issue

--- a/assets/scss/custom/_custom.scss
+++ b/assets/scss/custom/_custom.scss
@@ -413,3 +413,13 @@ article code
     }
   }
 }
+
+/* Chromium ignores mtable[columnalign] */
+mtd
+{
+  text-align: start;
+  &:first-child
+  {
+    text-align: end;
+  }
+}
